# kedro-base-ds

./: .gitignore  README.md  config.yml  cookiecutter.json  prompts.yml
{{ cookiecutter.repo_name }}/: .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/conf/base/: catalog.yml  logging.yml
{{ cookiecutter.repo_name }}/docs/source/: conf.py  index.rst
{{ cookiecutter.repo_name }}/src/: private-requirements.txt  requirements.txt
{{ cookiecutter.repo_name }}/src/tests/: test_run.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: hooks.py  pipeline_registry.py  settings.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/nodes/: primary.py  raw.py
